k8s/services/android-cloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopno-android
  labels:
    name: shopno-android
    app.kubernetes.io/part-of: shopnoltd
    shopnoltd.dev/security-tier: isolated
