k8s/services/android-cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: android-cloud-controller
  namespace: shopno-platform
spec:
  selector:
    app.kubernetes.io/name: android-cloud-controller
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: android-cloud-web
  namespace: shopno-platform
spec:
  selector:
    app.kubernetes.io/name: android-cloud-web
  ports:
    - name: http
      port: 8080
      targetPort: http
